buttons alignment corrected, removed some code comments

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ a:link {
 .btn-container {
   display: flex;
   justify-content: center;
+  align-items: center; 
   flex-wrap: wrap;
   margin-top: 25px;
 }
